updated the notebook

--- a/notebooks/bike_share_analysis.ipynb
+++ b/notebooks/bike_share_analysis.ipynb
@@ -45,6 +45,7 @@
     "\n",
     "### 1. Data Engineering & ETL Pipeline\n",
     "\n",
+    "\n",
     "The project begins with a robust ETL (Extract, Transform, Load) pipeline implemented in Python:\n",
     "\n",
     "```\n",
@@ -737,7 +738,7 @@
    "id": "b1b757e6",
    "metadata": {},
    "source": [
-    "# Create merged dataset with both start and end station information"
+    "### Create merged dataset with both start and end station information"
    ]
   },
   {
@@ -1692,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "c47c60ad",
    "metadata": {},
    "outputs": [
@@ -2513,7 +2514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "878735f1",
    "metadata": {},
    "outputs": [
@@ -3319,7 +3320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "id": "4a95388f",
    "metadata": {},
    "outputs": [
